--- a/Operaciones/src/operaciones/VentanaPrincipal.form
+++ b/Operaciones/src/operaciones/VentanaPrincipal.form
@@ -6,6 +6,9 @@
       <SubComponents>
         <Menu class="javax.swing.JMenu" name="jMenu1">
           <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/Imagenes/calculator.png"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Operaciones"/>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="18" style="1"/>
